Update p2 bootstrap to 4.13.0
Changes for using a 4.13.0 P2 Bootstrap. The reason for this version is that it still runs with Java 8, but also supports Java 11.